Ownership change in user playbook.
Index.html change.

Ownership change in user playbook2.

Index.html change2.

Triggering.

--- a/app/frontend-service/templates/index.html
+++ b/app/frontend-service/templates/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>The Final Project</h1>
+        <h1>The Fina Project</h1>
         <form action="/register" method="post">
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
